[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/OptionSwitcher.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/main/match_setup/ModeScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/monogram_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/ui/MyButton.gd" type="Script" id=5]

[node name="ModeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -210.328
margin_right = 335.0
margin_bottom = 313.672

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeSwitcher" parent="Panel/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 650.0
margin_bottom = 50.0

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 75.0
margin_right = 650.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 4 )
text = "Description of the mode."
align = 1
autowrap = true

[node name="ConfigParent" type="Control" parent="Panel/VBoxContainer"]
margin_top = 129.0
margin_right = 650.0
margin_bottom = 422.0
size_flags_vertical = 3

[node name="NextButton" type="Button" parent="Panel/VBoxContainer"]
margin_left = 250.0
margin_top = 447.0
margin_right = 400.0
margin_bottom = 504.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
text = "Next"
script = ExtResource( 5 )
[connection signal="item_selected" from="Panel/VBoxContainer/ModeSwitcher" to="." method="_on_ModeSwitcher_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
